samples/_failures_safe/1761604859_abe959_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b96fca6.c: In function ‘main’:
./samples/SAFE/__tmp_0b96fca6.c:163:5: error: expected declaration or statement at end of input
  163 |     }
      |     ^
